# try-hav2

./: Cargo.toml  README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
assets/: Main.tsx  actions.ts  index.tsx  styles.ts
assets/components/: Errors.tsx  Modal.tsx  Navbar.tsx  NewWorkshopModal.tsx  PriceInput.tsx  WorkshopItem.tsx  Workshops.tsx
assets/effects/: Http.ts
assets/types/: hyperapp.d.ts
src/: lib.rs  main.rs  repo.rs
tests/: api.rs
