[package]
name = "api"
version = "0.1.0"
authors = ["Dennis Dietrich <d.dietrich84@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "0.14"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
validator = "0.9"
validator_derive = "0.9"
futures = "0.1"
hyper-static = { git = "https://github.com/dennis84/hyper-static.git" }

[dev-dependencies]
time = "0.1.40"
tokio = "0.1"
